# coin-price-predictive-model

./: deep_learning.py  eth_future_price_prediction_v1.h5  get_realtime_data.py  main.py  predict_price.py  pyproject.toml  save_data.py  stock_price_prediction_v1.h5  trade.py
